--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Website</title>
     <link rel="stylesheet" type="text/css" href="CSS/indexStyle.css">
 </head>
+	
 <body>
     <header>
         <h1>Notification Project</h1>
@@ -13,6 +14,7 @@
 
     <nav>
         <ul>
+			<li><a href="Use cases/Requirements.html">Requirements</a></li>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
