--- a/Use cases/Requirements.html
+++ b/Use cases/Requirements.html
@@ -35,7 +35,8 @@
                 <li>It should run efficiently and consume minimal system resources.</li>
                 <li>The application should be compatible with major desktop operating systems (e.g., Windows, macOS, Linux).</li>
                 <li>Data related to calls and notifications should be securely stored and protected.</li>
-                <li>The application should provide error handling and logging for troubleshooting.</li>
+              <li>The application should provide error handling and logging for troubleshooting.</li>
+                <li>Edited by Iqbal&nbsp;</li>
             </ul>
         </section>
     </main>
