--- a/Use cases/Requirements.html
+++ b/Use cases/Requirements.html
@@ -24,7 +24,8 @@
                 <li>Users should be able to set notification preferences, such as time intervals for notifications.</li>
                 <li>Notifications should be user-configurable, including message content and notification frequency.</li>
                 <li>Notifications should be sent through a user-defined channel (e.g., pop-up notifications, email).</li>
-                <li>Users must have the option to snooze or dismiss notifications.</li>
+              <li>Users must have the option to snooze or dismiss notifications.</li>
+                <li>work on Gantt chart in progress&nbsp;</li>
             </ul>
         </section>
 
